Fluid-Sytem does not work! (R-2.62) #30298

Closed
opened 2012-02-22 10:27:28 +01:00 by Dirk Richter · 12 comments

%%%The Fluid-System does not work!. In both (32 and 64 Bit)-Systems. Checked on different Windows-7 Systems. The Fluid-System is Static and the Cancel-Button (Cross) does not work! The only thing to interrupt the Fluid-Baken ist to terminate the Programm with Taskmanager.%%%

%%%The Fluid-System does not work!. In both (32 and 64 Bit)-Systems. Checked on different Windows-7 Systems. The Fluid-System is Static and the Cancel-Button (Cross) does not work! The only thing to interrupt the Fluid-Baken ist to terminate the Programm with Taskmanager.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It works fine here on windows 7 64/32 bits.
Does it happen with all scenes or just with a particular setup? Anyway, having sample .blend file will help making sure we're using exactly the same configurations.%%%

%%%It works fine here on windows 7 64/32 bits. Does it happen with all scenes or just with a particular setup? Anyway, having sample .blend file will help making sure we're using exactly the same configurations.%%%

%%%it works on osx.%%%

%%%it works on osx.%%%
Author

%%%O.K.%%%

%%%O.K.%%%
Author

%%%O.K. I have Upload my Scene-File as Attachment and you can Test it. The Sphere as Flow-Objekt (InFlow) works perfect in V-2.61 but in V-2.62 there is a static Flow (All the same like Frame-1- and no "Flow"...) and the Cancel-Button does not work!. On two different Windows-7-Versions tested and on every System V-2.61 works but V-2.62 does not work! (Sorry for my bad English!)%%%

%%%O.K. I have Upload my Scene-File as Attachment and you can Test it. The Sphere as Flow-Objekt (InFlow) works perfect in V-2.61 but in V-2.62 there is a static Flow (All the same like Frame-1- and no "Flow"...) and the Cancel-Button does not work!. On two different Windows-7-Versions tested and on every System V-2.61 works but V-2.62 does not work! (Sorry for my bad English!)%%%

%%%Regression was caused by commit 43593 where speed control was added. In your case Speed is set to zero (maybe versioning patch issue or it was set to zero accidentally). If you set it to 1 behavior will be exactly the same as in 2.61 release.
I'm not sure if it's issue from blender side or elbeem (who doesn't break simulation for totally still setup).
Daniel, you seems the only developer who is active enough and familiar with elbeem code, can you please check this report? Thanks!%%%

%%%Regression was caused by commit 43593 where speed control was added. In your case Speed is set to zero (maybe versioning patch issue or it was set to zero accidentally). If you set it to 1 behavior will be exactly the same as in 2.61 release. I'm not sure if it's issue from blender side or elbeem (who doesn't break simulation for totally still setup). Daniel, you seems the only developer who is active enough and familiar with elbeem code, can you please check this report? Thanks!%%%

%%%The code in the version patch in that commit is wrong:
FluidsimSettings *fss = (FluidsimSettings *)md;%%%

%%%The code in the version patch in that commit is wrong: FluidsimSettings *fss = (FluidsimSettings *)md;%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Brecht, that versioning thing is indeed very bad, but it just solves one particular side of the issue -- old file now behaves in the same way as in previous release. But it does not resolve issue with cancelling bake when Speed is set to zero. Either we need to disallow setting speed to zero or we need this to be fixed from elbeem side.%%%

%%%Brecht, that versioning thing is indeed very bad, but it just solves one particular side of the issue -- old file now behaves in the same way as in previous release. But it does not resolve issue with cancelling bake when Speed is set to zero. Either we need to disallow setting speed to zero or we need this to be fixed from elbeem side.%%%
Member

%%%I would fix this from elbeem side.
Would be cool to have effects like having a camera flying around a time-stopped splash and then time goes on as normal.
Will (hopefully) fix this before next blender release.%%%

%%%I would fix this from elbeem side. Would be cool to have effects like having a camera flying around a time-stopped splash and then time goes on as normal. Will (hopefully) fix this before next blender release.%%%
Member

%%%Canceling the sim with speed = 0 should work again in svn.

Thank you for reporting.%%%

%%%Canceling the sim with speed = 0 should work again in svn. Thank you for reporting.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30298
No description provided.