Fix #30298: fluid simulation from older files not working when loaded into 2.62, this was due to a wrong version patch which leaves simulation speed to 0.